tests/predator-regre/test-0045.err
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0000.dot'...
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0001.dot'...
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0002.dot'...
test-0045.c:17:5: error: dereference of NULL value
test-0045.c:35:22: note: from call of max()
test-0045.c:20:5: note: from call of main()
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0003.dot'...
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0004.dot'...
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0005.dot'...
test-0045.c:17:5: error: dereference of NULL value
test-0045.c:39:22: note: from call of max()
test-0045.c:20:5: note: from call of main()
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0006.dot'...
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0007.dot'...
test-0045.c:16:20: note: writing heap graph to 'test-0045-fnc-0008.dot'...
test-0045.c:17:5: error: dereference of NULL value
test-0045.c:39:22: note: from call of max()
test-0045.c:20:5: note: from call of main()
test-0045.c:45:20: note: writing heap graph to 'test-0045-end-0000.dot'...
test-0045.c:45:20: note: writing heap graph to 'test-0045-end-0001.dot'...
